[project]
name = "hotel_booking_system"
version = "0.1.0"
description = "Crown Hotels Booking System"
authors = [{ name="Consultant", email="consultant@example.com" }]
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy>=2.0",
    "httpx",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "pyre-check",
]

[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 88

